[tool.poetry]
name = "streamlit_pg"
version = "0.1.0"
description = ""
authors = ["greatestgoat <ldlwbru0218@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.8.1"
pandas = "^1.4.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
